js updates(still might not work)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -360,13 +360,6 @@
                     </div>
                 </div>
 
-                <!-- Toggle full headers button - mini button -->
-                <button id="toggle-headers-btn"
-                        class="compact-btn btn-secondary p-2 relative w-8 h-8 flex items-center justify-center"
-                        title="Show full column widths">
-                    <i class="fas fa-arrows-alt-h text-xs"></i>
-                </button>
-
                 <!-- Quick refresh button - icon only -->
                 <button id="refresh-button"
                         class="compact-btn btn-secondary p-2 relative w-8 h-8 flex items-center justify-center"
@@ -842,6 +835,7 @@
 <script src="{{ versioned_static('js/modules/ui.js') }}"></script>
 <script src="{{ versioned_static('js/modules/grid.js') }}"></script>
 <script src="{{ versioned_static('js/modules/theme.js') }}"></script>
+<script src="{{ versioned_static('js/modules/filters.js') }}"></script>
 <script src="{{ versioned_static('js/edit.js') }}"></script>
 <script src="{{ versioned_static('js/enhanced-filters.js') }}"></script>
 <script src="{{ versioned_static('js/vaata_toimikut.js') }}"></script>
