js updates(still might not work)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -843,6 +843,7 @@
 <script src="{{ versioned_static('js/dokumendi_pohjad.js') }}"></script>
 <script src="{{ versioned_static('js/koosta_dokument.js') }}"></script>
 <script src="{{ versioned_static('js/version-checker.js') }}"></script>
+<script src="{{ versioned_static('js/toimik_buttons_fix.js') }}"></script>
 
 <!-- Additional script for improved table container sizing -->
 <script>
