makse varki ka vaiskelt V5

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1054,7 +1054,7 @@
                      class="flex flex-col items-center justify-center text-center hidden absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 max-w-md">
                     <i class="fas fa-layer-group text-4xl text-gray-400 dark:text-gray-600 mb-4"></i>
                     <p class="text-gray-500 dark:text-gray-400 mb-4">
-                        Klõpsake "Impordi CSV" nuppu andmete laadimiseks
+                        Klõpsake "Lae Andmed" nuppu andmete laadimiseks
                     </p>
                 </div>
             </div>
